syntax = "proto3";

package helloworld.api.v1;

option go_package = "git.xq5.com/golang/helloworld/api/proto/v1;v1";

import "google/protobuf/timestamp.proto";

message UserRequest {}

message UserInfo {
  uint32 id = 1;
  string userName = 2;
  string nickName = 3;
  uint32 age = 4;
  enum Gender {
    SECRET = 0;
    MALE = 1;
    FEMALE = 2;
  }
  Gender gender = 5;
}
// 登录请求参数 示例是使用自定义tag 可以使用以下写法定义自己的tag
message LoginRequest {
  // @gotags: form:"userName" json:"user_name" binding:"required"
  optional string userName = 1;  // 用户名
  // @gotags: form:"password" json:"password" binding:"required"
  optional string password = 2;  // 密码
}

message LoginResponse {
  google.protobuf.Timestamp logined_at = 1;  // 登录时间
}

message LogoutRequest {}

message LogoutResponse {}

message UpdateInfoRequest {
  bytes file = 1;
}

message UpdateInfoResponse {
  int64 affectedRows = 1;
  bool isSucceed = 2;
}

message NotifyRequest {
  optional string msg = 1;
  oneof notifyStyle {
    string email = 2;
    string phone = 3;
  }
}

message NotifyResponse {
  bool isSend = 1;
}